--- a/index.html
+++ b/index.html
@@ -12,28 +12,31 @@
 <body>
     <header>
         <nav>
-            <nav>
-                <ul>
-                    <li><a href="https://bit.ly/3DWEIKO" target="_blank">Главная</a></li>
-                    <li><a href="https://bit.ly/3s42G4p" target="_blank">О нас</a></li>
-                    <li><a href="http://koshkindomodessa.tilda.ws/#contacts" target="_blank">Контакты</a></li>
-                </ul>
-            </nav>
+            <ul>
+                <li><a href="https://bit.ly/3DWEIKO" target="_blank">Главная</a></li>
+                <li><a href="https://bit.ly/3s42G4p" target="_blank">О нас</a></li>
+                <li><a href="http://koshkindomodessa.tilda.ws/#contacts" target="_blank">Контакты</a></li>
+            </ul>
+        </nav>
     </header>
 
     <aside class="newsBlock">
         <article>
+            <h2>Пример 1</h2>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, officia.
         </article>
         <article>
+            <h2>Пример 2</h2>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, ullam!
         </article>
         <article>
+            <h2>Пример 3</h2>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, quia?
         </article>
     </aside>
     <main>
         <section class="lrm1">
+            <h2>Форматирование текста часть 1</h2>
             <p>Теги: abbr, cite, blockquote, q, strong, em</p>
             Lorem ipsum <abbr title="dolor sit amet consectetur adipisicing elit">DSACAE</abbr> dolor sit amet
             consectetur adipisicing elit. Sequi optio repellendus magni nihil consequuntur,
@@ -46,6 +49,7 @@
             <em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam explicabo magni expedita?</em>
         </section>
         <section class="lrm2">
+            <h2>Форматирование текста часть 2</h2>
             <p> Теги: mark dfn, ins, del</p>
             <mark> ipsum dolor sit amet consectetur, adipisicing elit.</mark> Ad nam quidem debitis cumque hic, nostrum
             ratione,
